<resources>
    <string name="app_name">Ecole En Ligne</string>
    <string name="btn_register_text">Register now</string>
    <string name="register_activity_header">Create your account</string>
    <string name="login_activity_header">Social Login</string>
    <string name="already_accont_text">or Login here</string>
    <string name="edt_email_hint">Your email address</string>
    <string name="edt_pwd_hint">Your password</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="welcome_text">Hello %s!</string>
    <string name="fb">Facebook</string>
    <string name="google">Continue with Google</string>
    <string name="facebook_app_id">538090253543897</string>
    <string name="fb_login_protocol_scheme">fb538090253543897</string>
    <string name="title_activity_registration">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_login_txt">sign in</string>
    <string name="register_invite">Not registered yet? </string>
    <string name="login_invite">Do you have already an account?</string>
    <string name="signin_account_link">Sign in here</string>
    <string name="create_account_link">Register here</string>
    <string name="or">or</string>
    <string name="surname_text">Surname:</string>
    <string name="name_text">Name:</string>
    <string name="name_hint">Type your name</string>
    <string name="surname_hint">Type your surname</string>
    <string name="complete_signup">complete registration</string>
    <string name="resp_legal_text">Legal responsible information:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="profile_type">
        <item>Parent</item>
        <item>Student</item>
    </string-array>
    <string name="activation_done">activation done</string>
    <string name="online_on">ON</string>
    <string name="online_off">OFF</string>
    <string name="verify_message">Please check your email inbox and click on the activation link to
        complete your registration to activate your account and click in the button below after activation.</string>
    <string name="offline_learning_mode">Offline mode</string>
    <string name="child_student_info">Child personal information</string>
    <string name="confirm">Confirm</string>
    <string name="parent_role_mother">Mother</string>
    <string name="parent_role_father">Father</string>
    <string name="parent_role_other">Other</string>
    <string name="student_genre_text">Genre:</string>
    <string name="student_male_text">Male</string>
    <string name="student_female_text">Female</string>
    <string name="student_othergen_text">Other</string>
    <string name="student_info_text">Student personal information:</string>
    <string name="parent_info_text">Parent personal information:</string>
    <string name="choose_courses">Choose at least one course to follow</string>
    <string-array name="class_type">
        <item> </item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>
    <string name="search_title">Search a course</string>
    <string name="search_hint">Search courses</string>
    <string name="resume_content">resume content</string>
    <string name="summary">SUMMARY</string>
    <string name="course_content">course content</string>
    <string name="course">COURSE</string>
    <string name="video_content">video content</string>
    <string name="videos">VIDEOS</string>
    <string name="quizItem">QUIZ</string>
    <string name="quiz_content">quizItem content</string>
    <string name="exercise">EXERCISE</string>
    <string name="exercise_content">exercise content</string>
    <string name="video_content_title">Watch a video:</string>

    <string name="sample_text">Nel mezzo del cammin di nostra vita, mi ritrovai per una selva oscura
        che la retta via era smarrita. Ahi quanto fu ardua e oscura
        quella radura, che nessuna scelta fu mai più dura.
    </string>
    <string name="resume_title">Resume - %1$s</string>
    <string name="paragraph">Paragraph %1$d - %2$s</string>
    <string name="finish_hint">finish</string>
    <string name="prev_hint">prev</string>
    <string name="next_hint">next</string>
    <string name="notifications_title_text">Notifications:</string>
    <string name="classroom_title">Your courses:</string>
    <string name="informations_text">Informations</string>

    <string name="headingSearch">search course</string>
    <string name="headingStudy">study</string>
    <string name="headingSave">save</string>
    <string name="headingVideo">watch lesson videos</string>
    <string name="headingTest">test yourself</string>
    <string name="headingMark">get your mark</string>
    <string name="descSearch">Find and add to your classroom your favorite courses to follow</string>
    <string name="descStudy">Study the lessons provided for each course</string>
    <string name="descSave">Save your favorite lessons for study everywhere!</string>
    <string name="descVideo">Enrich your course knowledge by watching super interesting videos</string>
    <string name="descTest">Exercize and test yourself through the app quizzes and exercises</string>
    <string name="descMark">Submit your exercises to get a mark from the app teachers</string>
    <string name="search_results">Search results:</string>
    <string name="average_mark_text">Average mark</string>
    <string name="exercises_done_text">Exercises done</string>
    <string name="quizzes_done_text">Quizzes done</string>
</resources>
