<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ParentInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/login_box"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_parent_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/parent_info_text"
            android:textColor="#1976d2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"  />

        <TextView
            android:id="@+id/tv_resp_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/resp_legal_text"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_parent_info" />

        <RadioGroup
            android:id="@+id/gender_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resp_info"
            >

            <RadioButton
                android:id="@+id/opt_mother"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/parent_role_mother" />

            <RadioButton
                android:id="@+id/opt_father"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/parent_role_father" />

            <RadioButton
                android:id="@+id/opt_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/parent_role_other" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/name_text"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtSurname" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/name_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"/>


        <TextView
            android:id="@+id/tv_surname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/surname_text"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_options" />
        <EditText
            android:id="@+id/edtSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_rounded_corners"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/surname_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/main_layout"
            app:layout_constraintStart_toStartOf="@+id/main_layout"
            app:layout_constraintTop_toBottomOf="@+id/tv_surname" />

        <TextView
            android:id="@+id/tv_learning_mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/offline_learning_mode"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/edtName"
            app:layout_constraintTop_toBottomOf="@id/edtName" />

        <Switch
            android:id="@+id/switchLearning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textOff="@string/online_off"
            android:textOn="@string/online_on"
            app:layout_constraintEnd_toEndOf="@+id/edtName"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_rounded_corners"
            android:backgroundTint="@color/colorAccent2"
            app:cornerRadius="36dp"
            android:minWidth="0dp"
            android:minHeight="40dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingVertical="8dp"
            android:text="@string/complete_signup"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            app:fontFamily="@font/opensans_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/edtName"
            app:layout_constraintTop_toBottomOf="@+id/tv_learning_mode" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_corners"
            android:backgroundTint="@color/colorAccent2"
            app:cornerRadius="36dp"
            android:layout_marginTop="8dp"
            android:minWidth="0dp"
            android:minHeight="40dp"
            android:text="back"
            android:textSize="14sp"
            app:fontFamily="@font/opensans_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/signup_btn"
            app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        app:elevation="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="#ff4881"
        app:layout_constraintBottom_toBottomOf="@+id/main_layout"
        app:layout_constraintRight_toRightOf="@id/main_layout"
        app:layout_constraintTop_toBottomOf="@+id/main_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>